# VirtualCockpit

./: README.md
VirtualCockpit/: CMakeLists.txt  main.cpp
VirtualCockpit.xcodeproj/: project.pbxproj
VirtualCockpit.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
VirtualCockpit.xcodeproj/project.xcworkspace/xcuserdata/ichko.xcuserdatad/: UserInterfaceState.xcuserstate
VirtualCockpit.xcodeproj/xcshareddata/xcschemes/: VirtualCockpit.xcscheme
VirtualCockpit.xcodeproj/xcuserdata/ichko.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
VirtualCockpit.xcodeproj/xcuserdata/ichko.xcuserdatad/xcschemes/: xcschememanagement.plist
VirtualCockpit/Font/: Font.cpp  Font.hpp
VirtualCockpit/GLFW/: glad.c  glad.h  shader.hpp
VirtualCockpit/GLFW/glm/detail/: glm.cpp
VirtualCockpit/Learning/: BoardComputer.cpp  BoardComputer.hpp  IndicatorKMH.cpp  IndicatorKMH.hpp  IndicatorRPM.cpp  IndicatorRPM.hpp  MiddleMenu.cpp  MiddleMenu.hpp
VirtualCockpit/Renderer/: Renderer.cpp  Renderer.hpp
VirtualCockpit/Texture/: Texture.cpp  Texture.hpp
VirtualCockpit/TimerMgr/: TimerMgr.cpp  TimerMgr.hpp  TimerProcess.cpp  TimerProcess.hpp
VirtualCockpit/src/Shaders/: fragment_shader.fs  fragment_shader_line.fs  vertex_shader.vs  vertex_shader_line.vs
